// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic functionality works 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Product",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "BigInt": "BigInt",
    "Boolean": "Boolean",
    "CreateProductInput": "CreateProductInput",
    "CreateProductPayload": "CreateProductPayload",
    "Cursor": "Cursor",
    "Date": "Date",
    "DeleteProductByIdInput": "DeleteProductByIdInput",
    "DeleteProductInput": "DeleteProductInput",
    "DeleteProductPayload": "DeleteProductPayload",
    "Float": "Float",
    "Fulltext": "Fulltext",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Product": "Product",
    "ProductCondition": "ProductCondition",
    "ProductInput": "ProductInput",
    "ProductPatch": "ProductPatch",
    "ProductsConnection": "ProductsConnection",
    "ProductsEdge": "ProductsEdge",
    "ProductsOrderBy": "ProductsOrderBy",
    "Query": "Query",
    "SearchInput": "SearchInput",
    "String": "String",
    "UpdateProductByIdInput": "UpdateProductByIdInput",
    "UpdateProductInput": "UpdateProductInput",
    "UpdateProductPayload": "UpdateProductPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`query _score field without search works 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Product",
      "Review",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "BigInt": "BigInt",
    "Boolean": "Boolean",
    "CreateProductInput": "CreateProductInput",
    "CreateProductPayload": "CreateProductPayload",
    "CreateReviewInput": "CreateReviewInput",
    "CreateReviewPayload": "CreateReviewPayload",
    "Cursor": "Cursor",
    "Date": "Date",
    "DeleteProductByIdInput": "DeleteProductByIdInput",
    "DeleteProductInput": "DeleteProductInput",
    "DeleteProductPayload": "DeleteProductPayload",
    "DeleteReviewByIdInput": "DeleteReviewByIdInput",
    "DeleteReviewInput": "DeleteReviewInput",
    "DeleteReviewPayload": "DeleteReviewPayload",
    "Float": "Float",
    "Fulltext": "Fulltext",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Product": "Product",
    "ProductCondition": "ProductCondition",
    "ProductInput": "ProductInput",
    "ProductPatch": "ProductPatch",
    "ProductsConnection": "ProductsConnection",
    "ProductsEdge": "ProductsEdge",
    "ProductsOrderBy": "ProductsOrderBy",
    "Query": "Query",
    "Review": "Review",
    "ReviewCondition": "ReviewCondition",
    "ReviewInput": "ReviewInput",
    "ReviewPatch": "ReviewPatch",
    "ReviewsConnection": "ReviewsConnection",
    "ReviewsEdge": "ReviewsEdge",
    "ReviewsOrderBy": "ReviewsOrderBy",
    "SearchInput": "SearchInput",
    "String": "String",
    "UpdateProductByIdInput": "UpdateProductByIdInput",
    "UpdateProductInput": "UpdateProductInput",
    "UpdateProductPayload": "UpdateProductPayload",
    "UpdateReviewByIdInput": "UpdateReviewByIdInput",
    "UpdateReviewInput": "UpdateReviewInput",
    "UpdateReviewPayload": "UpdateReviewPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`query without any zombodb search works on table that has zombodb index 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Product",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "BigInt": "BigInt",
    "Boolean": "Boolean",
    "CreateProductInput": "CreateProductInput",
    "CreateProductPayload": "CreateProductPayload",
    "Cursor": "Cursor",
    "Date": "Date",
    "DeleteProductByIdInput": "DeleteProductByIdInput",
    "DeleteProductInput": "DeleteProductInput",
    "DeleteProductPayload": "DeleteProductPayload",
    "Float": "Float",
    "Fulltext": "Fulltext",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Product": "Product",
    "ProductCondition": "ProductCondition",
    "ProductInput": "ProductInput",
    "ProductPatch": "ProductPatch",
    "ProductsConnection": "ProductsConnection",
    "ProductsEdge": "ProductsEdge",
    "ProductsOrderBy": "ProductsOrderBy",
    "Query": "Query",
    "SearchInput": "SearchInput",
    "String": "String",
    "UpdateProductByIdInput": "UpdateProductByIdInput",
    "UpdateProductInput": "UpdateProductInput",
    "UpdateProductPayload": "UpdateProductPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;

exports[`sort does not cause an error 1`] = `
GraphQLSchema {
  "__allowedLegacyNames": Array [],
  "__validationErrors": undefined,
  "_directives": Array [
    "@include",
    "@skip",
    "@deprecated",
  ],
  "_implementations": Object {
    "Node": Array [
      "Query",
      "Country",
    ],
  },
  "_mutationType": "Mutation",
  "_possibleTypeMap": Object {},
  "_queryType": "Query",
  "_subscriptionType": undefined,
  "_typeMap": Object {
    "BigInt": "BigInt",
    "Boolean": "Boolean",
    "CountriesConnection": "CountriesConnection",
    "CountriesEdge": "CountriesEdge",
    "CountriesOrderBy": "CountriesOrderBy",
    "Country": "Country",
    "CountryCondition": "CountryCondition",
    "CountryInput": "CountryInput",
    "CountryPatch": "CountryPatch",
    "CreateCountryInput": "CreateCountryInput",
    "CreateCountryPayload": "CreateCountryPayload",
    "Cursor": "Cursor",
    "DeleteCountryByIdInput": "DeleteCountryByIdInput",
    "DeleteCountryInput": "DeleteCountryInput",
    "DeleteCountryPayload": "DeleteCountryPayload",
    "Float": "Float",
    "ID": "ID",
    "Int": "Int",
    "Mutation": "Mutation",
    "Node": "Node",
    "PageInfo": "PageInfo",
    "Query": "Query",
    "SearchInput": "SearchInput",
    "String": "String",
    "UpdateCountryByIdInput": "UpdateCountryByIdInput",
    "UpdateCountryInput": "UpdateCountryInput",
    "UpdateCountryPayload": "UpdateCountryPayload",
    "__Directive": "__Directive",
    "__DirectiveLocation": "__DirectiveLocation",
    "__EnumValue": "__EnumValue",
    "__Field": "__Field",
    "__InputValue": "__InputValue",
    "__Schema": "__Schema",
    "__Type": "__Type",
    "__TypeKind": "__TypeKind",
  },
  "astNode": undefined,
  "extensionASTNodes": undefined,
}
`;
